--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'ProximaNova-Regular';
-    src: url('../fonts/ProximaNova-Regular.ttf');
-    font-weight: normal;
     font-style: normal;
+    font-weight: normal;
+    src: url('ProximaNova-Regular.ttf');
 }
